Changed nextCheckLineNumber to sequenceId and nextCheckSequenceId, as appropriate Fixed a type-conversion problem saving and reloading checks